--- a/_posts/2023-01-17-Coral-Part-1.md
+++ b/_posts/2023-01-17-Coral-Part-1.md
@@ -111,7 +111,7 @@ So far we've built a limited tensor library complete with automatic differentiat
 
 [^1]: [This blog post](http://blog.ezyang.com/2019/05/pytorch-internals/) has a wonderful explanation of some of what's going on behind the scenes in PyTorch.
 
-[^2]: While the first two are pretty self-explanatory, stride essentially encodes how the multi-dimensional tensor is mapped onto the one-dimensional chunk of memory. For example, within a three-dimensional tensor of dimensions $ 3\times 4\times 5 $, indices $(i,j,k)$ and $(i,j,k+1)$ are one entry apart in memory, indices $(i,j,k)$ and $(i,j+1,k)$ are five blocks apart, and indices $(i,j,k)$ and $(i+1,j,k)$ are $4\times 5 = 20$ blocks apart. The strides, one for each dimension are therefore $(20, 5, 1)$. 
+[^2]: While the first two are pretty self-explanatory, stride essentially encodes how the multi-dimensional tensor is mapped onto the one-dimensional chunk of memory. For example, within a three-dimensional tensor of dimensions $ 3\times 4\times 5 $, indices $(i,j,k)$ and $(i,j,k+1)$ are one entry apart in memory, indices $(i,j,k)$ and $(i,j+1,k)$ are five entries apart, and indices $(i,j,k)$ and $(i+1,j,k)$ are $4\times 5 = 20$ entries apart. The strides, one for each dimension, are therefore $(20, 5, 1)$. 
 
 [^3]: Note that while we may obtain the desired transposition by only updating the tensor's shape, this is sometimes undesirable for performance reasons. The property that adjacent entries in memory are adjacent in the tensor is no longer true after applying any permutation which moves the last dimension.
 
