Another tiny typo

--- a/_posts/2023-01-17-Coral-Part-1.md
+++ b/_posts/2023-01-17-Coral-Part-1.md
@@ -27,7 +27,7 @@ I spent much more time on this this I'm proud to admit. At first, I was thinking
 Central to everything are tensors: multi-dimensional arrays which can be added/subtracted/multiplied/convolved (cross-correlated??)/broadcasted/transposed, etc. Our tensor object should store the following:
 
 1. The tensor should point to some contiguous chunk of memory where it can store its contents. I've gone ahead and assumed that tensor entries are floats, so that each tensor is allotted `sizeof(float) * (tensor size)` bytes. Here, `sizeof(float)=4` is the number of bytes in a float (usually), and `tensor size` is pseudocode for the number of entries in the tensor.
-2. Our tensors, both out of necessity and for ease of iterating through them, should be aware of what we'll refer to as a tensor's *shape*. Explicitly, shape information includes the number of dimensions, the length along each dimension, and the stride along each dimension[^2]. As it'll be helpful to be able to reshape our tensors, and to pass around and manipulate shapes, we should be treating them as objects in their own right. Crucially, shapes allow us to decouple a tensor's raw data from its shape. Acquiring a new view on a tensors requires only creating an alias to the same raw data, but with a different (but compatible) shape object. Transposing a tensor (or any permutation of dimensions) again only requires updating the shape so that the dimensions are listed in the permuted order, and so the strides have been recomputed [^3].
+2. Our tensors, both out of necessity and for ease of iterating through them, should be aware of what we'll refer to as a tensor's *shape*. Explicitly, shape information includes the number of dimensions, the length along each dimension, and the stride along each dimension[^2]. As it'll be helpful to be able to reshape our tensors, and to pass around and manipulate shapes, we should be treating them as objects in their own right. Crucially, shapes allow us to decouple a tensor's raw data from its shape. Acquiring a new view on a tensor requires only creating an alias to the same raw data, but with a different (but compatible) shape object. Transposing a tensor (or any permutation of dimensions) again only requires updating the shape so that the dimensions are listed in the permuted order, and so the strides have been recomputed [^3].
 3. Ultimately, we want to be able to differentiate through expressions involving our tensors. Generally, as we combine our tensors with the various library functions we'll eventually write, a graph of the computation will be constructed. To keep track, tensors must store metadata describing their position in the graph and information needed for backpropagation. More on this in the next section.
 
 Whereas the first two requirements describe the tensor's data itself, the third relates only to how the tensor has been combined with other tensors, irrespective of any details of the tensor itself. I've opted to split what I've been thus far referring to as a *tensor* into two structures, which I've decided to call `tensor_t` and `variable_t` respectively. Finally, a third structure, `shape_t`, is used to store shape objects. `tensor_t` objects (structs, in C) comprise requirements (1) and (2), and represent the value that a *tensor*-valued variable might take on, while `variable_t` objects comprise the third, and represent a *tensor*-valued object, with additional autograd-related meta-data. 
