Update image paths

--- a/_posts/2023-01-17-Coral-Part-1.md
+++ b/_posts/2023-01-17-Coral-Part-1.md
@@ -64,13 +64,13 @@ In summary, we've introduced `shape_t`'s as first class objects which allow for 
 Our tensor library won't be very useful unless we have some way of performing backpropogation on expressions involving our `variable_t` objects. Here's the idea. By considering not just the variables present in the expression, but the intermediate results as well, we can construct from our expression a directed acyclic graph (DAG) where out-edges indicate "is an argument of". For example, the expression $(x+y)z - w$ is given by the graph:
 
 <center>
-<img src="/assets/images/image_needed.png" alt="drawing" width="600"/>
+<img src="assets/images/image_needed.png" alt="drawing" width="600"/>
 </center>
 
 Or, slightly more complex, we can have a variable appear more than once, as occurs in $x(x+y)$:
 
 <center>
-<img src="/assets/images/image_needed.png" alt="drawing" width="600"/>
+<img src="assets/images/image_needed.png" alt="drawing" width="600"/>
 </center>
 
 In any case, backpropogation amounts to initializing to one the gradient of the variable representing the final result of the expression, and then traversing the graph backwards, propogating the gradient backwards via the chain rule. Suppose that $y = f(x_1,\dots, x_n)$, and refer to the $x_i$ as the children of $y$, and $y$ as the parent of the $x_i$. Then at the $y$, this backwards procedure is as follows:
@@ -103,7 +103,7 @@ typedef struct {
     diff_arg_t* args[2];
 } grad_meta_t;
 ```
-where `variable_grad_op_t` is the function pointer described above.
+where `variable_grad_op_t` is the function pointer described above. Note that the `ref_count` attribute maintains the number of vertices to which there is an outgoing edge (in other words, how much times the vertex appears an an argument in the computation of another vertex). By only calling `backwards` recursively on a node when `ref_count` reaches zero, we are able to implement the `all_parents_processed` function in the pseudocode above.
 
 ### Summary
 
