--- a/_posts/2023-01-17-Coral-Part-1.md
+++ b/_posts/2023-01-17-Coral-Part-1.md
@@ -70,7 +70,7 @@ Our tensor library won't be very useful unless we have some way of performing ba
 Or, slightly more complex, we can have a variable appear more than once, as occurs in $x(x+y)$:
 
 <center>
-<img src="{{sute.baseurl}}/assets/images/image_needed.png" alt="drawing" width="600"/>
+<img src="{{site.baseurl}}/assets/images/image_needed.png" alt="drawing" width="600"/>
 </center>
 
 In any case, backpropogation amounts to initializing to one the gradient of the variable representing the final result of the expression, and then traversing the graph backwards, propogating the gradient backwards via the chain rule. Suppose that $y = f(x_1,\dots, x_n)$, and refer to the $x_i$ as the children of $y$, and $y$ as the parent of the $x_i$. Then at the $y$, this backwards procedure is as follows:
@@ -92,7 +92,7 @@ In order to enable this kind of backwards automatic differentiation, we need to 
 ```c
 // differentiable argument
 typedef struct {
-    variable_t* input;
+    variable_t* variable;
     variable_grad_op_t grad_op;
 } input_t;
 
